--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
@@ -15,7 +14,7 @@
         <maven.compiler.target>11</maven.compiler.target>
         <quarkus.version>2.4.0.Final</quarkus.version>
         <sonarqube.plugin.version>3.9.0</sonarqube.plugin.version>
-        <docker.image.prefix>172.30.38.4:8081/repository/docker-private/demo-project/quarkus-helloworld:${project.version}</docker.image.prefix>
+        <docker.image.prefix>172.30.38.4:8081/repository/docker-private/demo-project/quarkus-helloworld</docker.image.prefix>
     </properties>
 
     <dependencyManagement>
@@ -39,6 +38,7 @@
 
     <build>
         <plugins>
+            <!-- Quarkus Maven Plugin - Build Docker Image -->
             <plugin>
                 <groupId>io.quarkus</groupId>
                 <artifactId>quarkus-maven-plugin</artifactId>
@@ -60,6 +60,8 @@
                     </container-image>
                 </configuration>
             </plugin>
+
+            <!-- SonarQube Maven Plugin -->
             <plugin>
                 <groupId>org.sonarsource.scanner.maven</groupId>
                 <artifactId>sonar-maven-plugin</artifactId>
@@ -73,7 +75,8 @@
                     </execution>
                 </executions>
             </plugin>
-            <!-- Add the following Docker-related plugin -->
+
+            <!-- Docker-related Plugin for Pushing Image -->
             <plugin>
                 <groupId>io.quarkus</groupId>
                 <artifactId>quarkus-maven-plugin</artifactId>
