--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,19 +31,7 @@ test:
 
 docker:
   stage: docker
-  image: maven:latest
-  before_script:
-    - echo "Preparing to create Docker image..."
-  script:
-    - mvn $MAVEN_CLI_OPTS compile quarkus:build -Dquarkus.container-image.build=true -Dquarkus.container-image.image=$DOCKER_IMAGE_PREFIX
-    - mvn $MAVEN_CLI_OPTS quarkus:build -Dquarkus.container-image.push=true -Dquarkus.container-image.image=$DOCKER_IMAGE_PREFIX
-  tags:
-    - master
-    
-docker_push:
-  stage: docker_push
-  image:
-    name: docker:19.03.14
+  image: docker:19.03.14
   variables:
     DOCKER_HOST: tcp://dind.gitlab-runner:2375
   services:
@@ -53,9 +41,31 @@ docker_push:
   before_script:
     - mkdir -p $HOME/.docker
     - echo $DOCKER_AUTH_CONFIG > $HOME/.docker/config.json
-    - echo "Preparing to push Docker image..."
+    - echo "Preparing to create Docker image..."
   script:
+    - mvn $MAVEN_CLI_OPTS compile quarkus:build -Dquarkus.container-image.build=true -Dquarkus.container-image.image=$DOCKER_IMAGE_PREFIX
+    - mvn $MAVEN_CLI_OPTS quarkus:build -Dquarkus.container-image.push=true -Dquarkus.container-image.image=$DOCKER_IMAGE_PREFIX
     - docker images
     - docker push $DOCKER_IMAGE_PREFIX
   tags:
     - master
+    
+# docker_push:
+#   stage: docker_push
+#   image:
+#     name: docker:19.03.14
+#   variables:
+#     DOCKER_HOST: tcp://dind.gitlab-runner:2375
+#   services:
+#   - name: docker:19.03.14-dind
+#     entrypoint: ["env", "-u", "DOCKER_HOST"]
+#     command: ["dockerd-entrypoint.sh"]
+#   before_script:
+#     - mkdir -p $HOME/.docker
+#     - echo $DOCKER_AUTH_CONFIG > $HOME/.docker/config.json
+#     - echo "Preparing to push Docker image..."
+#   script:
+#     - docker images
+#     - docker push $DOCKER_IMAGE_PREFIX
+#   tags:
+#     - master
