--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
         <maven.compiler.target>11</maven.compiler.target>
         <quarkus.version>2.4.0.Final</quarkus.version>
         <sonarqube.plugin.version>3.9.0</sonarqube.plugin.version>
-        <docker.image.prefix>172.30.38.4:8083/repository/docker-private/demo-project/quarkus-helloworld</docker.image.prefix>
+        <docker.image.prefix>172.30.38.4:8083/repository/docker-private/demo-project/quarkus-helloworld:${project.version}</docker.image.prefix>
     </properties>
 
     <dependencyManagement>
