--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   <artifactId>quarkus-helloworld</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <properties>
-    <docker.image.prefix>172.30.38.4:8083/repository/docker-private/demo-project/quarkus-helloworld</docker.image.prefix>
+    <docker.image.prefix>repository/docker-private/demo-project/quarkus-helloworld</docker.image.prefix>
     <maven.compiler.source>11</maven.compiler.source>
     <maven.compiler.target>11</maven.compiler.target>
     <quarkus.version>3.1.0.Final</quarkus.version>
@@ -36,6 +36,19 @@
   <build>
     <plugins>
       <plugin>
+        <groupId>org.sonarsource.scanner.maven</groupId>
+        <artifactId>sonar-maven-plugin</artifactId>
+        <version>${sonarqube.plugin.version}</version>
+        <executions>
+          <execution>
+            <phase>verify</phase>
+            <goals>
+              <goal>sonar</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
         <groupId>io.quarkus</groupId>
         <artifactId>quarkus-maven-plugin</artifactId>
         <version>${quarkus.version}</version>
@@ -59,14 +72,18 @@
         </configuration>
       </plugin>
       <plugin>
-        <groupId>org.sonarsource.scanner.maven</groupId>
-        <artifactId>sonar-maven-plugin</artifactId>
-        <version>${sonarqube.plugin.version}</version>
+        <groupId>io.quarkus</groupId>
+        <artifactId>jib-maven-plugin</artifactId>
+        <configuration>
+          <to>
+            <image>${docker.image.prefix}</image>
+          </to>
+        </configuration>
         <executions>
           <execution>
-            <phase>verify</phase>
+            <phase>package</phase>
             <goals>
-              <goal>sonar</goal>
+              <goal>dockerBuild</goal>
             </goals>
           </execution>
         </executions>
