--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,5 @@
 stages:
-#  - test
-  - build
+  - test
   - docker_push
 
 variables:
@@ -9,25 +8,14 @@ variables:
   DOCKER_IMAGE_PREFIX: "repository/docker-private/demo-project/quarkus-helloworld"
   CI_REGISTRY_IMAGE: "172.30.38.4:8083/repository/docker-private/demo-project/quarkus-helloworld"
 
-# test:
-#   stage: test
-#   image: maven:3.8.4-openjdk-11-slim
-#   script:
-#     - mvn $MAVEN_CLI_OPTS test sonar:sonar -Dsonar.host.url=$SONAR_URL -Dsonar.login=$SONAR_LOGIN -Dsonar.password=$SONAR_PASSWORD
-#   tags:
-#    - master
-
-build:
-  stage: build
+test:
+  stage: test
   image: maven:3.8.4-openjdk-11-slim
   script:
-    - mvn $MAVEN_CLI_OPTS clean package -DskipTests
-    - mvn package -Dquarkus.container-image.build=true
-  artifacts:
-    paths:
-      - target/*.jar
+    - mvn $MAVEN_CLI_OPTS test sonar:sonar -Dsonar.host.url=$SONAR_URL -Dsonar.login=$SONAR_LOGIN -Dsonar.password=$SONAR_PASSWORD
   tags:
-    - master
+   - master
+
 
 
 docker_push:
