--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,12 +25,12 @@ docker_push:
   stage: docker_push
   image:
     name: pratik1945/openjdk11-docker:2.0.0testing
+    entrypoint: [""]
   variables:
     DOCKER_HOST: tcp://dind.gitlab-runner:2375
+    DOCKER_TLS_CERTDIR: ""
   services:
   - name: docker:19.03.14-dind
-    entrypoint: ["env", "-u", "DOCKER_HOST"]
-    command: ["dockerd-entrypoint.sh"]
   before_script:
     - mkdir -p $HOME/.docker
     - echo $DOCKER_AUTH_CONFIG > $HOME/.docker/config.json
