--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,7 +14,7 @@ build:
   image: maven:3.8.4-openjdk-11-slim
   script:
     - mvn $MAVEN_CLI_OPTS clean package -DskipTests
-    - mvn package -Dquarkus.container-image.build=true
+    - mvn package -Dquarkus.container-image.build=false
   artifacts:
     paths:
       - target/*.jar
